# Datalink

./: .gitignore  README.md  io.github.Datalink.json  meson.build
data/: io.github.Datalink.desktop.in  io.github.Datalink.gschema.xml  io.github.Datalink.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  authenticator.ui  authenticator.vala  datalink.gresource.xml  file-reader.vala  main.vala  meson.build  option.vala  serializer.vala  tokenizer.vala  user.vala  window.ui  window.vala
